# ink2text

./: .gitignore  pyproject.toml  streamlit_app.py
alembic/: env.py
research/: main.ipynb  model.ipynb
src/: __init__.py
src/components/: easyocr.py
src/core/: config.py  logger.py
src/database/: database.py
