[project]
name = "ink2text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.135.3",
    "imutils>=0.5.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pytesseract>=0.3.13",
    "sqlalchemy[asyncio]>=2.0.49",
    "streamlit>=1.40.0",
    "pillow>=11.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
